--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-devtools": "^4.28.0",
     "react-native": "0.72.4",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
