--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.5",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-devtools": "^4.28.0",
     "react-native": "0.72.4",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-redux": "^8.1.2",
     "yup": "^1.3.2"
   },
