--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^10.0.3",
     "react-redux": "^8.1.2",
     "yup": "^1.3.2"
   },
