--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-devtools": "^4.28.0",
     "react-native": "0.72.4",
+    "react-native-animatable": "^1.4.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-table-component": "^1.2.2",
