--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -24,6 +25,7 @@
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^8.1.2",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
